--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <h1>Цікава інформація про аніме</h1>
     <section> 
-   
+    <a href="page1.html"> <h2>Що таке аніме?</h2></a
     </section>
     <footer>
     <h5>&#169ArtemAndru</h5>    
