--- a/page1.html
+++ b/page1.html
@@ -20,6 +20,7 @@
     <h1>Що таке аніме?</h1>
     Аніме (МФА: [an̠ʲime] ( прослухати), від англ. animation [анімейшон]) — японська анімація. Найбільше відрізняється від анімації інших країн тим, що орієнтується не на дитячу, а переважно на підліткову чи навіть дорослу аудиторію. Популярність має не лише в Японії, а й у світі.
  <table>
+<table border="1">
    <caption>Як робиться аніме,покроково.</caption>
    <tr>
      <th >Кроки</th>
