--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section> 
     <a href="page1.html"> <h2>Що таке аніме?</h2></a>
     <a href="page2.html"> <h2>Жанри</h2></a>
+    <a href="page3.html"> <h2>Топ 10</h2></a>
     </section>
     <footer>
     <h5>&#169ArtemAndru</h5>    
