--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Жанри аніме</title>
 </head>
-<body>
+<body class="info">
     <nav>
         <ul>
             <li><a href="index.html">Головна</a></li>
