--- a/page3.html
+++ b/page3.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Що таке аніме?</title>
 </head>
-<body>
+<body class="info">
     
     <nav>
         <ul>
